objects/Distributor_Sales_Information__c/Distributor_Sales_Information__c.object-meta.xml
<CustomObject>
    <description>WAM CRM - to track the Sales / AUM of the distributor</description>
    <label>Distributor AUM in Market</label>
    <nameField>
        <displayFormat>DSI-{0000}</displayFormat>
        <label>Distributor AUM in Market Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor AUM in Market</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>