objects/Distributor_Sales_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Distributor_Sales_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>