objects/Distributor_Sales_Information__c/fields/Annual_AUM__c.field-meta.xml
<CustomField>
    <fullName>Annual_AUM__c</fullName>
    <label>AUM in Market</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>