objects/Distributor_Sales_Information__c/fields/Annual_Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Sales__c</fullName>
    <label>Net Sales in Market</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>