objects/Distributor_Sales_Information__c/fields/Record_link__c.field-meta.xml
<CustomField>
    <fullName>Record_link__c</fullName>
    <formula>HYPERLINK("/" &amp;Id, "View", "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record link</label>
    <type>Text</type>
</CustomField>